<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_fork"
            android:scaleType="centerCrop"
            android:contentDescription="@string/restaurant_image"/>

    <TextView
            android:id="@+id/restaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurantImage"
            android:text="@string/restaurant_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/merriweather_bold_italic"
            android:layout_toStartOf="@id/restaurantFavoriteNoFill"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <TextView
            android:id="@+id/restaurantRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurantName"
            android:text="@string/restaurantRatingNum"
            android:textSize="18sp"
            android:textColor="@color/colorGray"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="6dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <RatingBar
            android:id="@+id/restaurantRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/restaurantRating"
            android:layout_below="@id/restaurantName"
            android:layout_centerHorizontal="true"
            android:isIndicator="false"
            android:numStars="5"
            style="?android:attr/ratingBarStyleIndicator"
            android:stepSize=".5"
            android:theme="@style/RatingBar"/>

    <TextView
            android:id="@+id/restaurantOpinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/restaurantRating"
            android:layout_below="@id/restaurantRatingBar"
            android:text="@string/restaurant_opinion"
            android:textSize="18sp"
            android:textColor="@color/colorGray"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <ImageView
            android:id="@+id/restaurantFavoriteFill"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/favorite_fill"
            android:src="@drawable/ic_favorite_red_fill_24dp"
            android:visibility="invisible"
            android:layout_below="@id/restaurantImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <ImageView
            android:id="@+id/restaurantFavoriteNoFill"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/favorite_no_fill"
            android:src="@drawable/ic_favorite_red_no_fill_24dp"
            android:visibility="visible"
            android:layout_below="@id/restaurantImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <View
            android:id="@+id/restaurantHorizontalLineOne"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/restaurantOpinion"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:background="@color/colorLightGray"/>

</RelativeLayout>