<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/linear_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/homeRestaurantImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:src="@color/colorGray"
                android:contentDescription="@string/restaurant_image"
                android:scaleType="centerCrop"/>

        <RelativeLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

            <ImageView
                    android:id="@+id/homeFavoriteFill"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/favorite_fill"
                    android:src="@drawable/ic_favorite_red_fill_24dp"
                    android:visibility="invisible"/>

            <ImageView
                    android:id="@+id/homeFavoriteNoFill"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/favorite_no_fill"
                    android:src="@drawable/ic_favorite_red_no_fill_24dp"
                    android:visibility="visible"/>

            <TextView
                    android:id="@+id/homeRestaurantName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/naziv_restavracije"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:fontFamily="@font/montserrat_medium"/>

            <TextView
                    android:id="@+id/homeAddress"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/homeRestaurantName"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/naslov_restavracije"
                    android:fontFamily="@font/montserrat_medium"/>

            <RatingBar
                    android:id="@+id/homeRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/homeAddress"
                    android:layout_centerHorizontal="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:stepSize=".5"
                    android:theme="@style/RatingBar"/>

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>