<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/rateRestaurantImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_fork"
            android:scaleType="centerCrop"
            android:contentDescription="@string/restaurant_image"/>

    <TextView
            android:id="@+id/rateRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rateRestaurantImage"
            android:text="@string/restaurant_name"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/merriweather_bold_italic"
            android:layout_toStartOf="@id/restaurantFavoriteNoFill"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <TextView
            android:id="@+id/rateRestaurantPickRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rateRestaurantName"
            android:text="@string/restaurant_pick_rating"
            android:textSize="18sp"
            android:textColor="@color/colorGray"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"/>

    <RatingBar
            android:id="@+id/rateRestaurantRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/restaurantRating"
            android:layout_marginTop="4dp"
            android:layout_below="@id/rateRestaurantPickRating"
            android:layout_centerHorizontal="true"
            android:isIndicator="false"
            android:numStars="5"
            style="?android:attr/ratingBarStyleIndicator"
            android:stepSize=".5"
            android:theme="@style/RatingBar"/>

    <EditText
            android:id="@+id/rateCommentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restaurant_edit_text_opinion"
            android:drawableStart="@drawable/ic_comment_orange_24dp"
            android:layout_below="@id/rateRestaurantRatingBar"
            android:drawablePadding="5dp"
            android:inputType="text|textMultiLine"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
            android:autofillHints=""/>

    <Button
            android:id="@+id/rateButtonOpinion"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/button_google_login"
            android:layout_marginTop="8dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:drawableStart="@drawable/ic_rating_black_24dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
            android:layout_below="@id/rateCommentText"
            android:text="@string/button_opinion"/>

</RelativeLayout>