<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <ImageView
                android:src="@drawable/ic_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_internet"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/merriweather_bold_italic"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_error_msg"
                android:layout_marginTop="@dimen/activity_vertical_margin_48"
                android:layout_marginStart="@dimen/activity_horizontal_margin_64"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_64"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_error_description"
                android:layout_marginTop="@dimen/activity_vertical_margin_16"
                android:layout_marginStart="@dimen/activity_horizontal_margin_48"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_48"/>

    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>