<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashScreenActivity"
        android:background="@color/colorWhite">

    <TextView
            android:id="@+id/restaurants_feri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feri"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"/>

    <ImageView
            android:id="@+id/restaurants_splash_screen"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_fork"
            android:contentDescription="@string/splash_screen_icon"
            android:layout_above="@+id/restaurants_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin_16"/>

    <TextView
            android:id="@+id/restaurants_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:fontFamily="@font/merriweather_bold_italic"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin_16"/>

    <View
            android:id="@+id/restaurants_h_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/restaurants_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin_16"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="128dp"/>

</RelativeLayout>

