<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/navigation_header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/commentUserProfilePicture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:src="@drawable/ic_app"
            app:civ_border_width="1dp"/>

    <TextView
            android:id="@+id/commentUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/commentUserProfilePicture"
            android:text="@string/comment_user"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <RatingBar
            android:id="@+id/commentRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentUserName"
            android:layout_toEndOf="@id/commentUserProfilePicture"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_vertical_margin_16"
            android:isIndicator="true"
            android:numStars="5"
            style="?android:attr/ratingBarStyleIndicator"
            android:stepSize=".5"
            android:theme="@style/RatingBar"/>

    <TextView
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/commentUserProfilePicture"
            android:layout_below="@id/commentRatingBar"
            android:text="@string/comment_text"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <TextView
            android:id="@+id/commentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/commentUserProfilePicture"
            android:layout_below="@id/commentText"
            android:text="@string/comment_date"
            android:textSize="13sp"
            android:textColor="@color/colorGray"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"/>

    <View
            android:id="@+id/commentHorizontalLineOne"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/commentDate"
            android:layout_marginStart="@dimen/activity_horizontal_margin_16"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
            android:layout_marginTop="@dimen/activity_vertical_margin_16"
            android:background="@color/colorLightGray"/>

</RelativeLayout>